# PE-Task6-Rust

./: Cargo.toml  Dockerfile  run_rust_tests.sh
src/: lib.rs  main.rs
tests/: integration_tests.rs
