[package]
name = "temperature_converter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "temperature-converter"
path = "src/main.rs"

[lib]
name = "temperature_converter" 
path = "src/lib.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
assert_approx_eq = "1.1.0"